Fix: Header TD elements need an outline of none to stop of focus flicker (matching TH elements which already have this)

--- a/media/css/demo_table.css
+++ b/media/css/demo_table.css
@@ -201,7 +201,8 @@ table.display td.center {
 	background: url('../images/sort_desc_disabled.png') no-repeat center right;
 }
  
-th:active {
+table.display thead th:active,
+table.display thead td:active {
 	outline: none;
 }
 
